roles/openshift_ossm/docs/examples/istio-testapp/istio-testapp/allow-external-access-peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: allow-external-access
spec:
  mtls:
    mode: PERMISSIVE
