roles/openshift_ossm/docs/examples/istio-testapp/istio-testapp/testapp-zones-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp-zones
spec:
  replicas: 3
  selector:
    matchLabels:
      app: testapp-zones
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: testapp-zones
    spec:
      containers:
      - name: http
        image: quay.io/noseka1/toolbox-container:full
        command:
        - /bin/sh
        args:
        - -c
        - 'gunicorn-3
             --bind 0.0.0.0:8080
             --access-logfile -
             httpbin:app'
        # The container port must be declared, otherwise Istio won't
        # forward the traffic to the container correctly!
        ports:
        - containerPort: 8080
