roles/openshift_ossm/docs/examples/istio-testapp/istio-testapp/testapp-alias-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp-alias
spec:
  ports:
  - name: http
    port: 12345
