roles/openshift_ossm/docs/examples/istio-testapp/istio-testapp/testapp-route-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp-route
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: testapp-route
