roles/openshift_ossm/docs/examples/istio-testapp/istio-testapp/testapp-zones-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp-zones
spec:
  ports:
  - name: http
    port: 8080
  - name: https
    port: 8443
  selector:
    app: testapp-zones
