roles/openshift_ossm/docs/examples/istio-testapp/istio-testapp/testapp-http-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testapp-http
spec:
  selector:
    # Use istio default ingress gateway
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - testapp-http.@@ROUTER_DOMAIN@@
