roles/openshift_ossm/docs/examples/istio-testapp/istio-testapp/testapp-route-header-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testapp-route-header
spec:
  selector:
    # Use istio default ingress gateway
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - testapp-route-header.@@ROUTER_DOMAIN@@
