roles/openshift_ossm/docs/examples/istio-testapp/istio-testapp/access-external-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: access-external-services
spec:
  hosts:
  - google.com
  - www.google.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: TLS
  resolution: DNS
