roles/openshift_ossm/docs/examples/istio-testapp/istio-testapp/testapp-alias-se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: testapp-alias
spec:
  hosts:
  - testapp-alias
  location: MESH_INTERNAL
  ports:
  - number: 8080
    name: http
    protocol: HTTP
  - number: 8443
    name: https
    protocol: TLS
  resolution: DNS
  endpoints:
  - address: testapp.istio-testapp.svc
    ports:
      http: 8080
