roles/openshift_ossm/docs/examples/istio-testapp/istio-testapp/testapp-route-mirror-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testapp-route-mirror
spec:
  hosts:
  - testapp-route-mirror.@@ROUTER_DOMAIN@@
  gateways:
  - testapp-route-mirror
  http:
  - route:
    - destination:
        host: testapp-route
        subset: subset-v1
    mirror:
      host: testapp-route
      subset: subset-v2
