roles/openshift_ossm/docs/examples/istio-testapp/istio-testapp/testapp-zones-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: testapp-zones
spec:
  host: testapp-zones
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 5s
      baseEjectionTime: 10s
      maxEjectionPercent: 100
