roles/openshift_ossm/docs/examples/istio-testapp/istio-testapp/testapp-zones-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testapp-zones
spec:
  hosts:
  - testapp-zones.@@ROUTER_DOMAIN@@
  gateways:
  - testapp-zones
  http:
  - route:
    - destination:
        host: testapp-zones
        port:
          number: 8080
