roles/openshift_ossm/docs/examples/istio-testapp/istio-testapp/allow-external-access-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-external-access
spec:
  podSelector: {}
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
